<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_statie_plecare"
        android:layout_marginTop="99dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView android:id="@+id/statie_plecare_textView" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statie_plecare"
            android:layout_marginTop="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="30dp"
            android:layout_weight="0.60"
            android:layout_gravity="center" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statie_plecare_autocomplete"
            android:layout_below="@+id/mai_departe_button"
            android:layout_toLeftOf="@+id/mai_departe_button"
            android:layout_toStartOf="@+id/mai_departe_button"
            android:layout_marginTop="0dp"
            android:layout_weight="0.40"
            android:hint="@string/nume_statie"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_statie_plecare"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="122dp"
        android:id="@+id/linearLayout_statie_destinatie">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/statie_destinatie"
            android:id="@+id/statie_destinatie_textView"
            android:textSize="30dp"
            android:layout_weight="0.60"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statie_destinatie_autocomplete"
            android:layout_below="@+id/mai_departe_button"
            android:layout_toLeftOf="@+id/mai_departe_button"
            android:layout_toStartOf="@+id/mai_departe_button"
            android:layout_marginTop="0dp"
            android:layout_weight="0.40"
            android:layout_gravity="center"
            android:hint="@string/nume_statie"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/linearLayout_statie_destinatie"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout_via_ruta">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruta_via"
            android:id="@+id/ruta_via_textView"
            android:textSize="30dp"
            android:layout_weight="0.60"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp" />

        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ruta_via_autocomplete"
            android:layout_below="@+id/mai_departe_button"
            android:layout_toLeftOf="@+id/mai_departe_button"
            android:layout_toStartOf="@+id/mai_departe_button"
            android:layout_marginTop="0dp"
            android:layout_weight="0.40"
            android:layout_gravity="center"
            android:hint="@string/nume_statie"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mai_departe"
        android:id="@+id/mai_departe_button"
        android:layout_marginTop="147dp"
        android:textSize="30dp"
        android:layout_below="@+id/linearLayout_via_ruta"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
